src/grammar/preludioParser.js
// Generated from .\preludio.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import preludioListener from './preludioListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class preludioParser extends antlr4.Parser {

    static grammarFileName = "preludio.g4";
    static literalNames = [ null, "'func'", "'prql'", "'let'", "'->'", "'='", 
                            "'+'", "'-'", "'*'", "'**'", "'/'", "'%'", "'~'", 
                            "'=='", "'!='", "'<='", "'>='", "'|'", "':'", 
                            "','", "'.'", "'$'", "'..'", "'<'", "'>'", "'['", 
                            "']'", "'('", "')'", "'_'", "'`'", "'\"'", "'''", 
                            "'\"\"\"'", "'''''", "'and'", "'or'", "'not'", 
                            "'??'", "'null'" ];
    static symbolicNames = [ null, "FUNC", "PRQL", "LET", "ARROW", "ASSIGN", 
                             "PLUS", "MINUS", "STAR", "POW", "DIV", "MOD", 
                             "MODEL", "EQ", "NE", "LE", "GE", "BAR", "COLON", 
                             "COMMA", "DOT", "DOLLAR", "RANGE", "LANG", 
                             "RANG", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
                             "UNDERSCORE", "BACKTICK", "DOUBLE_QUOTE", "SINGLE_QUOTE", 
                             "TRIPLE_DOUBLE_QUOTE", "TRIPLE_SINGLE_QUOTE", 
                             "AND", "OR", "NOT", "COALESCE", "NULL_", "BOOLEAN", 
                             "INTEGER", "FLOAT", "IDENT", "IDENT_START", 
                             "IDENT_NEXT", "WHITESPACE", "NEWLINE", "COMMENT", 
                             "INTERVAL_KIND", "STRING" ];
    static ruleNames = [ "nl", "program", "programIntro", "funcDef", "funcDefName", 
                         "funcDefParams", "funcDefParam", "typeDef", "typeTerm", 
                         "stmt", "assignStmt", "pipeline", "inlinePipeline", 
                         "identBacktick", "funcCall", "funcCallParam", "namedArg", 
                         "assign", "multiAssign", "exprCall", "expr", "term", 
                         "exprUnary", "literal", "list", "nestedPipeline" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = preludioParser.ruleNames;
        this.literalNames = preludioParser.literalNames;
        this.symbolicNames = preludioParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 20:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 9);
    		case 1:
    			return this.precpred(this._ctx, 8);
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	nl() {
	    let localctx = new NlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, preludioParser.RULE_nl);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        _la = this._input.LA(1);
	        if(!(_la===preludioParser.NEWLINE || _la===preludioParser.COMMENT)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, preludioParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 54;
	                this.nl(); 
	            }
	            this.state = 59;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===preludioParser.PRQL) {
	            this.state = 60;
	            this.programIntro();
	        }

	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===preludioParser.NEWLINE || _la===preludioParser.COMMENT) {
	            this.state = 63;
	            this.nl();
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 82;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << preludioParser.FUNC) | (1 << preludioParser.LET) | (1 << preludioParser.PLUS) | (1 << preludioParser.MINUS) | (1 << preludioParser.LBRACKET) | (1 << preludioParser.LPAREN) | (1 << preludioParser.BACKTICK))) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (preludioParser.NOT - 37)) | (1 << (preludioParser.NULL_ - 37)) | (1 << (preludioParser.BOOLEAN - 37)) | (1 << (preludioParser.INTEGER - 37)) | (1 << (preludioParser.FLOAT - 37)) | (1 << (preludioParser.IDENT - 37)) | (1 << (preludioParser.STRING - 37)))) !== 0)) {
	            this.state = 72;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case preludioParser.FUNC:
	                this.state = 69;
	                this.funcDef();
	                break;
	            case preludioParser.LET:
	                this.state = 70;
	                this.stmt();
	                break;
	            case preludioParser.PLUS:
	            case preludioParser.MINUS:
	            case preludioParser.LBRACKET:
	            case preludioParser.LPAREN:
	            case preludioParser.BACKTICK:
	            case preludioParser.NOT:
	            case preludioParser.NULL_:
	            case preludioParser.BOOLEAN:
	            case preludioParser.INTEGER:
	            case preludioParser.FLOAT:
	            case preludioParser.IDENT:
	            case preludioParser.STRING:
	                this.state = 71;
	                this.pipeline();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 77;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===preludioParser.NEWLINE || _la===preludioParser.COMMENT) {
	                this.state = 74;
	                this.nl();
	                this.state = 79;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 85;
	        this.match(preludioParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	programIntro() {
	    let localctx = new ProgramIntroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, preludioParser.RULE_programIntro);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(preludioParser.PRQL);
	        this.state = 91;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===preludioParser.IDENT) {
	            this.state = 88;
	            this.namedArg();
	            this.state = 93;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 94;
	        this.nl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcDef() {
	    let localctx = new FuncDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, preludioParser.RULE_funcDef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(preludioParser.FUNC);
	        this.state = 97;
	        this.funcDefName();
	        this.state = 98;
	        this.funcDefParams();
	        this.state = 99;
	        this.match(preludioParser.ARROW);
	        this.state = 100;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcDefName() {
	    let localctx = new FuncDefNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, preludioParser.RULE_funcDefName);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(preludioParser.IDENT);
	        this.state = 104;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===preludioParser.LANG) {
	            this.state = 103;
	            this.typeDef();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcDefParams() {
	    let localctx = new FuncDefParamsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, preludioParser.RULE_funcDefParams);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===preludioParser.IDENT) {
	            this.state = 106;
	            this.funcDefParam();
	            this.state = 111;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcDefParam() {
	    let localctx = new FuncDefParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, preludioParser.RULE_funcDefParam);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 112;
	            this.namedArg();
	            break;

	        case 2:
	            this.state = 113;
	            this.match(preludioParser.IDENT);
	            break;

	        }
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===preludioParser.LANG) {
	            this.state = 116;
	            this.typeDef();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeDef() {
	    let localctx = new TypeDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, preludioParser.RULE_typeDef);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(preludioParser.LANG);
	        this.state = 120;
	        this.typeTerm();
	        this.state = 121;
	        this.match(preludioParser.BAR);
	        this.state = 125;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===preludioParser.IDENT) {
	            this.state = 122;
	            this.typeTerm();
	            this.state = 127;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 128;
	        this.match(preludioParser.RANG);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeTerm() {
	    let localctx = new TypeTermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, preludioParser.RULE_typeTerm);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(preludioParser.IDENT);
	        this.state = 132;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===preludioParser.LANG) {
	            this.state = 131;
	            this.typeDef();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmt() {
	    let localctx = new StmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, preludioParser.RULE_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.assignStmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignStmt() {
	    let localctx = new AssignStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, preludioParser.RULE_assignStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(preludioParser.LET);
	        this.state = 137;
	        this.match(preludioParser.IDENT);
	        this.state = 138;
	        this.match(preludioParser.ASSIGN);
	        this.state = 139;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pipeline() {
	    let localctx = new PipelineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, preludioParser.RULE_pipeline);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.exprCall();
	        this.state = 147;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 142;
	                this.nl();
	                this.state = 143;
	                this.funcCall(); 
	            }
	            this.state = 149;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	        this.state = 152;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case preludioParser.NEWLINE:
	        case preludioParser.COMMENT:
	            this.state = 150;
	            this.nl();
	            break;
	        case preludioParser.EOF:
	            this.state = 151;
	            this.match(preludioParser.EOF);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	inlinePipeline() {
	    let localctx = new InlinePipelineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, preludioParser.RULE_inlinePipeline);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.exprCall();
	        this.state = 159;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===preludioParser.BAR) {
	            this.state = 155;
	            this.match(preludioParser.BAR);
	            this.state = 156;
	            this.funcCall();
	            this.state = 161;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identBacktick() {
	    let localctx = new IdentBacktickContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, preludioParser.RULE_identBacktick);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(preludioParser.BACKTICK);
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << preludioParser.FUNC) | (1 << preludioParser.PRQL) | (1 << preludioParser.LET) | (1 << preludioParser.ARROW) | (1 << preludioParser.ASSIGN) | (1 << preludioParser.PLUS) | (1 << preludioParser.MINUS) | (1 << preludioParser.STAR) | (1 << preludioParser.POW) | (1 << preludioParser.DIV) | (1 << preludioParser.MOD) | (1 << preludioParser.MODEL) | (1 << preludioParser.EQ) | (1 << preludioParser.NE) | (1 << preludioParser.LE) | (1 << preludioParser.GE) | (1 << preludioParser.BAR) | (1 << preludioParser.COLON) | (1 << preludioParser.COMMA) | (1 << preludioParser.DOT) | (1 << preludioParser.DOLLAR) | (1 << preludioParser.RANGE) | (1 << preludioParser.LANG) | (1 << preludioParser.RANG) | (1 << preludioParser.LBRACKET) | (1 << preludioParser.RBRACKET) | (1 << preludioParser.LPAREN) | (1 << preludioParser.RPAREN) | (1 << preludioParser.UNDERSCORE) | (1 << preludioParser.DOUBLE_QUOTE))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (preludioParser.SINGLE_QUOTE - 32)) | (1 << (preludioParser.TRIPLE_DOUBLE_QUOTE - 32)) | (1 << (preludioParser.TRIPLE_SINGLE_QUOTE - 32)) | (1 << (preludioParser.AND - 32)) | (1 << (preludioParser.OR - 32)) | (1 << (preludioParser.NOT - 32)) | (1 << (preludioParser.COALESCE - 32)) | (1 << (preludioParser.NULL_ - 32)) | (1 << (preludioParser.BOOLEAN - 32)) | (1 << (preludioParser.INTEGER - 32)) | (1 << (preludioParser.FLOAT - 32)) | (1 << (preludioParser.IDENT - 32)) | (1 << (preludioParser.IDENT_START - 32)) | (1 << (preludioParser.IDENT_NEXT - 32)) | (1 << (preludioParser.WHITESPACE - 32)) | (1 << (preludioParser.COMMENT - 32)) | (1 << (preludioParser.INTERVAL_KIND - 32)) | (1 << (preludioParser.STRING - 32)))) !== 0)) {
	            this.state = 163;
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===preludioParser.BACKTICK || _la===preludioParser.NEWLINE) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 168;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 169;
	        this.match(preludioParser.BACKTICK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcCall() {
	    let localctx = new FuncCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, preludioParser.RULE_funcCall);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.match(preludioParser.IDENT);
	        this.state = 175;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 172;
	                this.funcCallParam(); 
	            }
	            this.state = 177;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcCallParam() {
	    let localctx = new FuncCallParamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, preludioParser.RULE_funcCallParam);
	    try {
	        this.state = 182;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 178;
	            this.namedArg();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 179;
	            this.assign();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 180;
	            this.multiAssign();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 181;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	namedArg() {
	    let localctx = new NamedArgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, preludioParser.RULE_namedArg);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 184;
	        this.match(preludioParser.IDENT);
	        this.state = 185;
	        this.match(preludioParser.COLON);
	        this.state = 188;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 186;
	            this.assign();
	            break;

	        case 2:
	            this.state = 187;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign() {
	    let localctx = new AssignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, preludioParser.RULE_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 190;
	        this.match(preludioParser.IDENT);
	        this.state = 191;
	        this.match(preludioParser.ASSIGN);
	        this.state = 192;
	        this.exprCall();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


